<?xml version="1.0" encoding="UTF-8"?>
<!-- ~ Licensed to STRATIO (C) under one or more contributor license agreements. 
	~ See the NOTICE file distributed with this work for additional information 
	~ regarding copyright ownership. The STRATIO (C) licenses this file ~ to 
	you under the Apache License, Version 2.0 (the ~ "License"); you may not 
	use this file except in compliance ~ with the License. You may obtain a copy 
	of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless 
	required by applicable law or agreed to in writing, ~ software distributed 
	under the License is distributed on an ~ "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY ~ KIND, either express or implied. See the License for 
	the ~ specific language governing permissions and limitations ~ under the 
	License. -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.stratio.connector</groupId>
	<artifactId>stratio-connector-mongodb</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<description>Connector for MongoDB</description>
	<url>http://www.stratio.com</url>
	<name>MongoDB Connector</name>

	<properties>
		<mongo.connector.version>0.3.0-SNAPSHOT</mongo.connector.version>
		<crossdata.version>0.1.1</crossdata.version>
		<commons.connector.version>0.3.0-SNAPSHOT</commons.connector.version>
		<mongo.driver.version>2.12.4</mongo.driver.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>


	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0t</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<profiles>
		<profile>
			<id>FT</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<includes>
								<include>**/*FT.java</include>
							</includes>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
								</goals>
								<configuration>
									<includes>
										<include>**/*FT.class</include>
									</includes>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<scm>
		<connection>scm:git:git@github.com:Stratio/stratio-connector-mongodb.git</connection>
		<developerConnection>scm:git:git@github.com:Stratio/stratio-connector-mongodb.git</developerConnection>
		<url>https://github.com/Stratio/stratio-connector-mongodb</url>
	</scm>

	<developers>
		<developer>
			<id>darroyo</id>
			<name>David Arroyo Cazorla</name>
			<email>darroyo@stratio.com</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>

	<distributionManagement>

		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>

		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>

	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>${mongo.driver.version}</version>
		</dependency>
		<dependency>
			<artifactId>crossdata-common</artifactId>
			<groupId>com.stratio.crossdata</groupId>
			<version>${crossdata.version}</version>
		</dependency>
		<dependency>
			<groupId>com.stratio.connector</groupId>
			<artifactId>stratio-connector-commons</artifactId>
			<version>${commons.connector.version}</version>
		</dependency>
		<dependency>
			<groupId>com.stratio.crossdata</groupId>
			<artifactId>crossdata-connector</artifactId>
			<version>${crossdata.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>com.stratio.connector</groupId>
			<artifactId>stratio-connector-commons</artifactId>
			<classifier>tests</classifier>
			<version>${commons.connector.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.8</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<argLine>${jacocoUT-argline}</argLine>
					<argLine>-noverify</argLine>
					<skip></skip>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifestEntries>
							<version>${project.version}</version>
							<projectName>${project.name}</projectName>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>crossdata-connector-maven-plugin</artifactId>
				<groupId>com.stratio.crossdata</groupId>
				<version>${crossdata.version}</version>
				<configuration>
					<mainClass>com.stratio.connector.mongodb.core.MongoConnector</mainClass>
					<jmxPort>7191</jmxPort>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.1.201405082137</version>
				<configuration>
					<destFile>${basedir}/target/jacoco.exec</destFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<aggregate>true</aggregate>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>


		</plugins>
	</build>
</project>
